# microservice-blog

./: .dockerignore  .env  Cargo.toml  FEATURE_ANALYSIS.md  docker-compose.yaml
.github/workflows/: cd.yaml  ci.yaml
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: config.rs  lib.rs  main.rs
auth-service/src/infrastructure/: http.rs
auth-service/src/presentation/: state.rs
common/: Cargo.toml
common/benches/: cache_bench.rs
common/src/: config.rs  db.rs  error.rs  lib.rs  macros.rs  outbox.rs  pagination.rs  pubsub.rs  telemetry.rs  types.rs
common/src/cache/: local.rs  mod.rs  redis.rs  tiered.rs  traits.rs
gateway-service/: Cargo.toml  Dockerfile
gateway-service/config/: base.yaml  local.yaml  production.yaml
gateway-service/src/: config.rs  lib.rs  main.rs
gateway-service/src/domain/: models.rs  repositories.rs
gateway-service/src/infrastructure/: repositories.rs
gateway-service/src/presentation/: handler.rs  http.rs  mod.rs  models.rs  query.rs  state.rs
gateway-service/tests/api/: helpers.rs  integration.rs
notification-service/: Cargo.toml  Dockerfile  entrypoint.sh
notification-service/config/: base.yaml
notification-service/migration/: Cargo.toml
notification-service/migration/src/: lib.rs  m20220101_000001_create_notifications.rs  m20220102_000002_create_outbox.rs  main.rs
notification-service/src/: lib.rs  main.rs  subscriber.rs
notification-service/src/domain/: repository.rs
notification-service/src/domain/entities/: notification.rs
notification-service/src/infrastructure/: http.rs
notification-service/src/infrastructure/database/: factory.rs  mod.rs  seaorm.rs
notification-service/src/presentation/: mod.rs  response.rs  state.rs
notification-service/src/presentation/handlers/: mod.rs  notification.rs  types.rs  websocket.rs
notification-service/src/presentation/routes/: mod.rs  notification.rs
posts-service/: Cargo.toml  Dockerfile  entrypoint.sh
posts-service/benches/: posts_bench.rs
posts-service/config/: base.yaml  production.yaml  test.yaml
posts-service/migration/: Cargo.toml
posts-service/migration/src/: m20220101_000001_create_table.rs  m20220102_000002_create_outbox.rs
posts-service/src/: main.rs
posts-service/src/domain/: mod.rs  repository.rs  types.rs
posts-service/src/domain/entities/: post.rs
posts-service/src/infrastructure/: http.rs
posts-service/src/infrastructure/database/: bootstrap.rs  cache.rs  factory.rs  logger.rs  mod.rs  postgres.rs  seaorm.rs  url.rs
posts-service/src/presentation/: state.rs
posts-service/src/presentation/handlers/: mod.rs  posts.rs  types.rs
posts-service/src/presentation/routes/: health.rs  mod.rs  posts.rs
posts-service/tests/: common.rs  health_check.rs  posts.rs
users-service/: Cargo.toml  Dockerfile  entrypoint.sh
users-service/config/: base.yaml  test.yaml
users-service/migration/: Cargo.toml
users-service/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220102_000002_create_outbox.rs  main.rs
users-service/src/: main.rs
users-service/src/domain/: mod.rs  repository.rs  types.rs
users-service/src/domain/entities/: user.rs
users-service/src/infrastructure/: http.rs
users-service/src/infrastructure/database/: bootstrap.rs  cache.rs  factory.rs  logger.rs  mod.rs  seaorm.rs  types.rs
users-service/src/presentation/: mod.rs  responses.rs  state.rs
users-service/src/presentation/handlers/: health.rs  mod.rs  types.rs  users.rs
users-service/src/presentation/routes/: health.rs  users.rs
users-service/tests/: common.rs  health_check.rs  users.rs
