[package]
name = "common"
version = "0.1.0"
edition = "2024"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["ws"] }
config = "0.15.18"
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres"] }
thiserror = "2.0.17"
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "registry",
] }
sea-orm = { version = "2.0.0-rc.18", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
tokio = { version = "1.48.0", features = ["full"] }
paste = "1.0.15"
