[package]
name = "common"
version = "0.1.0"
edition = "2024"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["ws"] }
config = "0.15.18"
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.145"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "registry",
] }
sea-orm = { version = "2.0.0-rc.18", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
tokio = { version = "1.48.0", features = ["full"] }
paste = "1.0.15"
redis = { version = "1.0.3", features = ["tokio-comp"] }
uuid = { version = "1.20.0", features = ["v4"] }
moka = { version = "0.12.13", features = ["future"] }
google-cloud-pubsub = "0.30.0"
google-cloud-googleapis = "0.16.0"
google-cloud-auth = "1.6.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }

[[bench]]
name = "cache_bench"
harness = false
