[package]
name = "posts-service"
version = "0.1.0"
edition = "2024"

[lib]
name = "posts_service"
path = "src/lib.rs"

[[bin]]
name = "posts_service"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["ws"] }
chrono = { version = "0.4.42", features = ["clock"] }
config = "0.15.18"
reqwest = { version = "0.13.1", features = ["json"] }
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio-native-tls",
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-log = "0.2.0"
uuid = { version = "1.18.1", features = ["v4"] }

common = { path = "../common/" }
migration = { package = "posts-migration", path = "migration" }
serde_json = "1.0.145"
sea-orm = { version = "2.0.0-rc.18", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
urlencoding = "2.1.3"
paste = "1.0.15"
validator = { version = "0.20.0", features = ["derive"] }
typed-builder = "0.23.2"
moka = "0.12.13"

[dev-dependencies]
anyhow = "1.0.100"
criterion = { version = "0.5", features = ["async_tokio"] }
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", features = ["clock"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

[[bench]]
name = "posts_bench"
harness = false
