[package]
name = "notification-migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "notification_migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.18"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
